# scistudio-package-template

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hatch_build.py  mkdocs.yml  pyproject.toml
.claude/rules/: rules.md
.codex/rules/: rules.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
docs/: DOCUMENTATION-STANDARD.md  package-overview.md  reference.md  ui-style-guide.md
scripts/: build_package_docs.py  ota_publish.py  snapshot_api.py  validate_contract.py
src/scistudio_package_example/: __init__.py  helpers.py  types.py
src/scistudio_package_example/blocks/: __init__.py  example.py
src/scistudio_package_example/previewers/: __init__.py
tests/: test_contract.py  test_developer_contract.py  test_example_block.py  test_ota_publish.py  test_packaging.py
tests/api/: public_surface.snapshot.json  test_public_surface_freeze.py
