[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "scistudio-package-example"
version = "0.1.0"
description = "Example SciStudio package — copy this template to start a new package."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "SciStudio Contributors" }]
dependencies = [
    # Core. Private and not on PyPI yet, so CI installs it from the private
    # repo (see .github/workflows/ci.yml). The version floor still documents
    # the minimum core contract this package targets.
    "scistudio>=0.2.1a0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "mypy>=1.10",
    "build>=1.2",
]

# Three entry points register the package with SciStudio core. Keep all three
# even if a group is empty (return []), so discovery is uniform across packages.
[project.entry-points."scistudio.blocks"]
example = "scistudio_package_example:get_block_package"

[project.entry-points."scistudio.types"]
example = "scistudio_package_example:get_types"

[project.entry-points."scistudio.previewers"]
example = "scistudio_package_example.previewers:get_previewers"

# OTA hot-update source (#1784). The publish-time source of truth for
# scripts/ota_publish.py: it packs src/, hashes it, and uploads manifest.json +
# the snapshot to `manifest_url`'s release. The same URL/channel are mirrored in
# the package's PackageInfo.ota (src/.../__init__.py); validate_contract.py
# enforces they match. `min_core_base` is the minimum core `a.b.c` base a client
# must run to apply this package — usually the `scistudio>=` floor above.
[tool.scistudio.ota]
manifest_url = "https://github.com/jiazhenz026/scistudio-package-example/releases/download/ota-alpha/manifest.json"
channel = "alpha"
min_core_base = "0.2.1"

[tool.hatch.build.targets.wheel]
packages = ["src/scistudio_package_example"]
# Ship any packaged previewer frontend assets in the wheel.
artifacts = [
    "src/scistudio_package_example/previewers/assets/*.js",
    "src/scistudio_package_example/previewers/assets/*.mjs",
    "src/scistudio_package_example/previewers/assets/*.css",
]

# Lint/format/type config mirrors SciStudio core so authors get the same
# feedback locally as in the monorepo.
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["scistudio_package_example"]

[tool.mypy]
python_version = "3.11"
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
# Core ships without published type stubs; don't fail authors on its imports.
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
